# SalesAnalysisStreamlit

./: .dockerignore  Dockerfile  Dockerfile.uv  Makefile  README.md  compose.streamlit.yml  docker-compose.yml  pyproject.toml
.archive/: Dockerfile  Dockerfile.uv  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  requirements.txt
app/: config_path.py  main.py
app/.streamlit/: config.toml
app/core/: logging.py
data/: supermarket_sales.csv
