[tool.poetry]
name = "salesanalysisstreamlit"
version = "0.1.0"
description = ""
authors = ["Maverick Wong <mvrck.wong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
